Solidify modifier fails on twisted quad. #48084

Closed
opened 2016-04-08 04:10:28 +02:00 by Isaac Weaver · 8 comments

System Information
system-info.txt

Blender Version
Broken: 2.77 65f279b

Short description of error
The solidify modifier fails when it's working with a 4-vertex plane that is slightly twisted. The generated face will intersect with the original face slightly in the center.

Exact steps for others to reproduce the error
In the attached blend file there's a mesh with two separate faces, each twisted a little; and a solidify modifier. Both faces have intersecting centers. Oddly, if you check Flip Normals on the solidify modifier, they no longer intersect...
Solidify-Fail.blend

**System Information** [system-info.txt](https://archive.blender.org/developer/F301341/system-info.txt) **Blender Version** Broken: 2.77 65f279b **Short description of error** The solidify modifier fails when it's working with a 4-vertex plane that is slightly twisted. The generated face will intersect with the original face slightly in the center. **Exact steps for others to reproduce the error** In the attached blend file there's a mesh with two separate faces, each twisted a little; and a solidify modifier. Both faces have intersecting centers. Oddly, if you check `Flip Normals` on the solidify modifier, they no longer intersect... [Solidify-Fail.blend](https://archive.blender.org/developer/F301343/Solidify-Fail.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @IsaacWeaver

Added subscriber: @IsaacWeaver

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29

This is due to how tessellation happens (you can 'preview' it with triangulate modifier, 'fixed' quad method)…

Though I would not consider this a bug, maybe we could handle this situation better, @ideasman42?

This is due to how tessellation happens (you can 'preview' it with triangulate modifier, 'fixed' quad method)… Though I would not consider this a bug, maybe we could handle this situation better, @ideasman42?
Author

I just realized that when using the solidify tool in edit mode on the exact same mesh with the same thickness, it works just fine without any intersections. I would expect these tools to work the same...

I just realized that when using the solidify tool in edit mode on the exact same mesh with the same thickness, it works just fine without any intersections. I would expect these tools to work the same...

This isn't a bug strictly speaking, but its not a big change to ensure the first vertex in both faces is the same, then the remaining vertices are flipped.

Have a change prepared, will test further and commit if all goes well.

This isn't a bug strictly speaking, but its not a big change to ensure the first vertex in both faces is the same, then the remaining vertices are flipped. Have a change prepared, will test further and commit if all goes well.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by e5a2790ecb

This issue was referenced by e5a2790ecbdc748cc5d67af60ad5251eee0a7b6f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48084
No description provided.